--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.11.4
 django-allauth==0.33.0
 django-autoslug==1.9.3
 django-contrib-comments==1.8.0
+gunicorn==19.7.1
 Pillow==4.2.1
 psycopg2==2.7.3.1
 whitenoise==3.3.0
